--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ padding-left: 20px;
 <section id="education">
 <div class="section-content">
 <h2>EDUCATION</h2>
-<p1>B.Sc. COMPUTER APPLICATION
+<p1>BACHELOR OF COMPUTER APPLICATION
 </p1>
 <br>Sri Krishna Adithya College of Arts and Science</br>
 <br>Coimbatore,Tamil Nadu. </br>
