--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ padding-left: 20px;
 <header>
 <div class="header-content">
 <!-- Add your profile picture here -->
-<img src="C:\Users\maria\Downloads\23BSCA140 (2).JPG" alt="Your Profile Picture" class="profile-picture">
+<img src="23BSCA140 (2).JPG" alt="Your Profile Picture" class="profile-picture">
 <h1>MARY LUMINA FERNANDO M</h1>
 <p>STUDENT</p>
 </div>
@@ -141,7 +141,7 @@ padding-left: 20px;
 <center>
 <h2>Resume</h2>
 
-<a href="C:\Users\maria\Downloads\Mary CV Resume.pdf" target="_blank" class="download-button">Download CV</a>
+<a href="Mary CV Resume.pdf" target="_blank" class="download-button">Download CV</a>
 
 </center>
 </div>
